--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "node-emoji": "^1.10.0",
     "node-json-db": "^1.1.0",
     "telegraf": "^3.37.0"
   },
