--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
+    "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "node-emoji": "^1.10.0",
     "node-json-db": "^1.1.0",
