--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "repository": "https://github.com/bandantonio/grocery-life",
+  "author": "Anton Zolotukhin",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.19.2",
     "cron": "^1.8.2",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "node-emoji": "^1.10.0",
     "node-json-db": "^1.1.0",
+    "body-parser": "^1.19.0",
     "telegraf": "^3.37.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.3"
   }
 }
