--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node-emoji": "^1.10.0",
     "node-json-db": "^1.1.0",
-    "body-parser": "^1.19.0",
-    "telegraf": "^3.37.0"
+    "node-telegram-bot-api": "^0.50.0"
   }
 }
