--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development node index.js"
   },
   "keywords": [],
   "repository": "https://github.com/bandantonio/grocery-life",
@@ -13,11 +14,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
-    "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "node-emoji": "^1.10.0",
-    "node-json-db": "^1.1.0",
     "node-telegram-bot-api": "^0.50.0"
   }
 }
