--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node-json-db": "^1.1.0",
     "node-telegram-bot-api": "^0.50.0"
   }
 }
